--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "sails-disk": "~0.10.9",
     "sails-hook-autoreload": "^0.13.2",
     "sails-hook-email": "^0.12.1",
-    "sails-mongo": "0.12.1"
+    "sails-mongo": "^0.12.1"
   },
   "scripts": {
     "debug": "node debug app.js",
